fix(templates/application): Add labels to search input fields
Labels are hidden, but still accessible for screen readers (https://webaim.org/techniques/css/invisiblecontent/#absolutepositioning).

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -141,6 +141,15 @@ body {
     @include border-radius(15px);
 }
 
+form.search label {
+    position: absolute;
+    left: -10000px;
+    top: auto;
+    width: 1px;
+    height: 1px;
+    overflow: hidden;
+}
+
 #header input.search {
     width: 100%;
     margin-left: 16px;
